# sdv_description_gz

./: CMakeLists.txt  README.md  package.xml
hooks/: resource_paths.dsv.in  resource_paths.sh
launch/: gazebo_launch.py
models/road/: model.config  model.sdf
models/road/meshes/: model.glb
models/vtec_sdv/: model.config  model.sdf
models/vtec_sdv/meshes/: sdv_chassis.dae  sdv_wheel.dae
rviz/: rviz.rviz
src/: ros_ackermann_bridge.cpp
worlds/: parking.sdf
